<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/detailBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.railgun.spica.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/detailContentBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:textColor="?attr/textColorTitle2"
                android:textSize="21sp"
                app:layout_collapseMode="parallax"
                tools:text="Subtitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_8">

                <TextView
                    android:id="@+id/type_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="33dp"
                    android:background="@drawable/radius_rectangle_blue"
                    android:ellipsize="end"
                    android:textColor="@color/textColorTitle2"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:visibility="visible"
                    android:text="@string/bangumi_type_cn" />

                <TextView
                    android:id="@+id/type_raw"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="33dp"
                    android:background="@drawable/radius_rectangle_red"
                    android:visibility="gone"
                    android:ellipsize="end"
                    android:textColor="@color/textColorTitle2"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/bangumi_type_raw" />

                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="16sp"
                    app:layout_collapseMode="parallax"
                    tools:text="2018-01-02, 12 episodes, Mon" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/summary_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:layout_marginLeft="33dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="22dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:textColor="?attr/textColorTitle2" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/summary2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:ellipsize="none"
                        android:fadingEdgeLength="30dp"
                        android:requiresFadingEdge="horizontal"
                        android:singleLine="true"
                        android:textColor="?attr/textColorTitle2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/button_more"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/button_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="sans-serif-medium"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/more"
                        android:textColor="@color/meguminRed"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/detailContentBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:id="@+id/collectionStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_red"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="4dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_playlist_add_check_black_24dp"
                        android:tint="@color/textColorTitle2" />

                    <TextView
                        android:id="@+id/collectionStatusText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/dp_8"
                        android:textColor="@color/textColorTitle2"
                        android:text="@string/loading"/>

                </LinearLayout>

                <Button
                    android:id="@+id/button_bgm_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:background="@drawable/button_red"
                    android:text="BGM.TV"
                    android:textColor="@color/textColorTitle2" />

                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_share_24dp"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:padding="@dimen/dp_8"
                    android:background="@drawable/button_red" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="8dp"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:text="Episodes"
            android:textColor="?attr/textColorLowLight"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:focusable="true" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>
